--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,12 @@
 	padding-top: 0.24rem;
   padding-bottom: 0.6rem;
 }
+.text_4{
+  text-align: center;
+  color:#000;
+  font-size: 0.37rem;
+  padding-top: 0.24rem;
+}
 .arrow{
 	height:0.48rem;
 	background-image: url(../images/arrow_03.png);
