--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
   li{list-style: none;}
 
   .content1{
-  	width: 100%;
+  	width: 10.8rem;
   	height: 17.43rem;
   	background-image: url(../images/bgc1.png);
   	-webkit-background-size: cover;
@@ -29,12 +29,11 @@
   .content1_txt{
   	width: 8.41rem;
   	height: 10.56rem;
-	background-image: url(../images/bgc.png);
+	  background-image: url(../images/bgc.png);
   	-webkit-background-size: cover;
   	background-size: cover;
   	background-repeat: no-repeat;
-  	margin-left: 1.41rem;
-	z-index: 99;
+	 margin:0 auto;
 
   }
   .h1{
